[Qodana] Revisited array list creations from array and split into mutable/immutable